# uia-agent

./: .build_metadata.slices.yaml  .build_metadata.yaml  .builder_prompt_m1.md  .builder_prompt_m2_m3.md  .builder_prompt_polish.md  .builder_prompt_scaffold.md  .gitignore  .stage_m1.result.json  .stage_m2_m3.result.json  .stage_polish.result.json  .stage_scaffold.result.json  BENCHMARK.md  BUILD_SETUP_NEXT_STEPS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  pages.yml  release.yml
assets/: demo.tape
docs/: demo.tape
examples/: calculator_demo.py  notepad_demo.py
src/uia_agent/: __init__.py  actions.py  agent.py  benchmark.py  cli.py  llm.py  prompts.py  uia_tree.py  vision.py
src/uia_agent/adapters/: __init__.py  langchain_tool.py  mcp_server.py
tests/: test_actions.py  test_adapters.py  test_benchmark.py  test_llm_schema.py  test_mcp_adapter.py  test_uia_tree.py  test_vision_fallback.py
web/: site.json
