[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "uia-agent"
version = "0.1.0"
description = "Open-source LLM agent action space for driving legacy Windows thick-client apps via the UIA accessibility tree."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "supermario_leo", email = "leo.stack@outlook.com" },
]
keywords = [
    "llm",
    "agent",
    "windows",
    "uia",
    "automation",
    "accessibility",
    "rpa",
    "anthropic",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System",
]
dependencies = [
    "uiautomation>=2.0,<3.0",
    "pywinauto>=0.6.8,<0.7",
    "anthropic>=0.40,<1.0",
    "openai>=1.50,<2.0",
    "typer>=0.12,<0.13",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
uia-agent = "uia_agent.cli:app"

[project.urls]
Homepage = "https://github.com/supermario-leo/uia-agent"
Repository = "https://github.com/supermario-leo/uia-agent"
Issues = "https://github.com/supermario-leo/uia-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uia_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/uia_agent",
    "README.md",
    "README.en.md",
    "LICENSE",
    "examples",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "windows_only: tests that require a live Windows desktop session",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
