[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "uia-agent"
version = "0.3.0"
description = "Open-source LLM agent action space for driving legacy Windows thick-client apps via the UIA accessibility tree."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "supermario_leo", email = "leo.stack@outlook.com" },
]
keywords = [
    "llm",
    "agent",
    "windows",
    "uia",
    "automation",
    "accessibility",
    "rpa",
    "anthropic",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System",
]
dependencies = [
    "uiautomation>=2.0,<3.0",
    "pywinauto>=0.6.8,<0.7",
    "anthropic>=0.40,<1.0",
    "openai>=1.50,<2.0",
    "typer>=0.12,<0.13",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
# Framework adapter layer — installs LangChain so the uia-agent tools plug into
# a LangChain agent. The core stays dependency-free; this is opt-in.
langchain = [
    "langchain-core>=0.3,<1.0",
]
# OCR + bbox vision fallback — used only when the pruned UIA tree yields zero
# actionable nodes. Needs the Tesseract binary on PATH at runtime.
vision = [
    "pytesseract>=0.3.10,<0.4",
    "pillow>=10.0,<12.0",
]
# MCP server — exposes the `uia_dump` + `uia_run` tools over MCP stdio so any
# MCP client (Claude Desktop, etc.) can drive a Windows app. The mcp SDK is
# imported lazily; the core stays dependency-free.
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
uia-agent = "uia_agent.cli:app"

[project.urls]
Homepage = "https://github.com/supermario-leo/uia-agent"
Repository = "https://github.com/supermario-leo/uia-agent"
Issues = "https://github.com/supermario-leo/uia-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uia_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/uia_agent",
    "README.md",
    "README.en.md",
    "BENCHMARK.md",
    "CHANGELOG.md",
    "LICENSE",
    "examples",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "windows_only: tests that require a live Windows desktop session",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
